# DataForgeAI

./: .gitignore  .replit  README.md  design_guidelines.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-AI-A-universal-prompt-based-data-creation-application-for-ETL-users-that-generates-customizable-dat-1763557061675_1763557061676.txt
client/: index.html
client/src/: index.css
client/src/components/: ai-prompt-tab.tsx  data-preview.tsx  export-controls.tsx  file-upload-tab.tsx  schema-builder.tsx  template-dialog.tsx
client/src/pages/: home.tsx
server/: export-service.ts  export_service.py  file-parser.ts  file-parser.ts.old  file_parser.py  index.ts  main.py  openai-service.ts  openai-service.ts.old  openai_service.py  routes.ts.old  schemas.py  storage.py  storage.ts.old
shared/: schema.ts
static/css/: styles.css
static/js/: app.js
templates/: index.html
